# ecma335

./: .rustfmt.toml  Cargo.toml  README.md
data/: empty.il
src/: bytes.rs  lib.rs
src/metadata/: errors.rs  headers.rs  mod.rs
src/metadata/streams/: blobs.rs  guids.rs  mod.rs  strings.rs  tables.rs  user_strings.rs
src/metadata/streams/tables/: flags.rs  id.rs  rows.rs  signatures.rs  table.rs
src/pe/: errors.rs  headers.rs  mod.rs  object.rs
tests/: empty.rs
